--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-numptyphysics (0.3.0.7) unstable; urgency=low
+numptyphysics (0.3.0.9) unstable; urgency=low
 	
   * action replay
   * updated physics engine
   * supports different screen sizes
+  * menus
 
- -- Tim Edmonds <tmedmonds@gmail.com>  Thu, 6 Nov 2008 15:48:31 +0000
+ -- Tim Edmonds <tmedmonds@gmail.com>  Thu, 16 Jan 2008 15:48:31 +0000
 
 numptyphysics (0.2) unstable; urgency=low
 	
