--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+numptyphysics (0.3.1) harmattan; urgency=low
+
+  * Build for Harmattan
+  * Cleaned up and simplified build system
+
+ -- Thomas Perl <m@thp.io>  Fri, 22 Jun 2012 13:26:00 +0200
+
 numptyphysics (0.3.0.9) unstable; urgency=low
 	
   * action replay
